findbugs util (includes ticket #370)